Fixed some serialization-deserialization errors and added the springboot dockerfile and the docker-compose file